[package]
name = "raydium"
version = "0.1.0"
edition = "2024"
authors = ["ohaddahan@gmail.com"]
license = "MIT"
description = "raydium client"
keywords = ["raydium", "solana"]
categories = ["cryptography"]
repository = "https://github.com/solana-pools/raydium.git"

[dependencies]
borsh = { version = "1.5.7" }
solana-pubkey = { version = "2.4.0", features = ["serde", "borsh"] }
solana-account-info = "2.3.0"
solana-program-error = { version = "2.2.2", features = ["borsh", "serde"] }
solana-program-entrypoint = { version = "2.3.0" }
solana-cpi = { version = "2.2.1" }
solana-instruction = { version = "2.3.0", features = ["serde", "borsh"] }
solana-decode-error = { version = "2.3.0" }
solana-msg = { version = "2.2.1" }
num-derive = { version = "0.4.2" }
thiserror = "2.0.12"
num-traits = "0.2.19"

[features]
fetch = []
serde = []
anchor-idl-build = []
anchor = []
